--- a/sites/index.html
+++ b/sites/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html   >
+<html lang="en">
 <head>
+	<meta charset="utf-8">
 	<title>Hello Coursera</title>
 </head>
 <body>
 		<h1>Hello Cousera</h1>
 		<h2>How are you!</h2>
-		<p>Na wao, I just put a paragrph tag now naaow</p>
+		<p>Na wao, I just put a paragrph tag now naaow </p>
 </body>
 </html>
