--- a/sites/index.html
+++ b/sites/index.html
@@ -7,6 +7,6 @@
 <body>
 		<h1>Hello Cousera</h1>
 		<h2>How are you!</h2>
-		<p>Na wao, I just put a paragrph tag now naaow </p>
+		<p>Click <a href="module2-solution/index.html">here for my assignment</a></p>
 </body>
 </html>
