--- a/sites/index.html
+++ b/sites/index.html
@@ -8,7 +8,7 @@
 		<h1>Hello Cousera</h1>
 		<h2>How are you!</h2>
 		<p>Click <a href="module2-solution/index.html">here for my assignment</a></p>
-	        <p>Click <a href="david-chu-restaurant/index.html">here for my assignment</a></p>
+	        <p>Click <a href="david-chu-restaurant/index.html">David Chu Restaurant</a></p>
 	
 </body>
 </html>
